--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.9.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.18"
+    "@types/express": "^5.0.2",
+    "@types/node": "^22.15.18",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
