--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.18",
+    "@types/react-toastify": "^4.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "axios": "^1.9.0",
+    "react-toastify": "^11.0.5"
   }
 }
