--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,13 @@
 	"license": "ISC",
 	"type": "commonjs",
 	"dependencies": {
+		"@types/argon2": "^0.14.1",
+		"@types/jsonwebtoken": "^9.0.9",
+		"argon2": "^0.43.0",
 		"axios": "^1.9.0",
 		"cors": "^2.8.5",
-		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
+		"jsonwebtoken": "^9.0.2",
 		"mysql2": "^3.14.1",
 		"react-toastify": "^11.0.5"
 	},
@@ -29,6 +32,7 @@
 		"@types/cors": "^2.8.18",
 		"@types/express": "^5.0.2",
 		"@types/node": "^22.15.18",
+		"dotenv": "^16.5.0",
 		"ts-node": "^10.9.2",
 		"ts-node-dev": "^2.0.0",
 		"tsx": "^4.19.4",
