--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,17 +1,3 @@
 {
-	"builds": [
-		{
-			"src": "client/vite-project/package.json",
-			"use": "@vercel/static-build",
-			"config": {
-				"distDir": "dist"
-			}
-		}
-	],
-	"routes": [
-		{
-			"src": "/(.*)",
-			"dest": "client/vite-project/$1"
-		}
-	]
+	"rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
