--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,3 +1,10 @@
 {
+	"version": 2,
+	"builds": [
+		{
+			"src": "client/vite-project/package.json",
+			"use": "@vercel/static-build"
+		}
+	],
 	"rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
