--- a/vercel.json
+++ b/vercel.json
@@ -5,13 +5,19 @@
 			"src": "client/vite-project/package.json",
 			"use": "@vercel/static-build",
 			"config": {
-				"distDir": "dist"
+				"distDir": "dist",
+				"routes": [
+					{
+						"src": "/(.*)",
+						"dest": "/index.html"
+					}
+				]
 			}
 		}
 	],
 	"routes": [
 		{
-			"src": "/(.*)",
+			"src": "/.*",
 			"dest": "/index.html"
 		}
 	]
